# CppPluginTest

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: pluginLoader.hpp
core/interface/: plugin.hpp  pluginClasses.hpp  pluginExports.hpp
core/src/: main.cpp  pluginLoader.cpp
plugin/: CMakeLists.txt
plugin/include/: examplePlugin.hpp
plugin/src/: examplePlugin.cpp
plugins/dependencyPlugin/: CMakeLists.txt
plugins/dependencyPlugin/src/: dependencyPlugin.cpp
plugins/dependentPlugin/: CMakeLists.txt
plugins/dependentPlugin/include/: dependentPlugin.hpp
plugins/dependentPlugin/src/: dependentPlugin.cpp
plugins/minimalPlugin/: CMakeLists.txt
plugins/minimalPlugin/include/: minimalPlugin.hpp
plugins/minimalPlugin/src/: minimalPlugin.cpp
